# kipi-plugins

./: CMakeLists.txt
reverseimagesearch/: CMakeLists.txt  Messages.sh  kipiplugin_reverseimagesearch.desktop.cmake  kipiplugin_reverseimagesearchui.rc  plugin_reverseimagesearch.cpp  plugin_reverseimagesearch.h  reverseimagesearchengine.cpp  reverseimagesearchengine.h
reverseimagesearch/data/: 3diqdb.html.template  CMakeLists.txt  ascii2d.html.template  baidu.html.template  common.js  deepfeatures.html.template  google.html.template  harrylu.html.template  imgops.html.template  iqdb.html.template  karmadecay.html.template  saucenao.html.template  tineye.html.template  viral.html.template
reverseimagesearch/icons/: CMakeLists.txt
