#
# Copyright (c) 2017 Vladislav Mileshkin
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.

install(FILES common.js DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES ascii2d.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES baidu.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES deepfeatures.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES google.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES imgops.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES iqdb.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES 3diqdb.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES karmadecay.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES saucenao.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES tineye.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES viral.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
install(FILES harrylu.html.template DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_reverseimagesearch)
